# smartneev-reccomender

./: .gitignore
services/: docker-compose.yml
services/data_indexer/: README.md  indexer.py  pyproject.toml  query_client.py
services/utils/: timeit.py
services/vector_data_indexer/: pyproject.toml
