[tool.poetry]
name = "data-indexer"
version = "0.1.0"
description = "Indexes data into elasticsearch"
authors = ["nishu3210 <nishu3210@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "data_indexer"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
elasticsearch = "^8.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
