[tool.poetry]
name = "vector-data-indexer"
version = "0.1.0"
description = ""
authors = ["Nitesh Jaswal <nitesh1511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.0.268"
qdrant-client = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
